# zephyr-projects

./: .gitignore  README.md  zephyr-projects.code-workspace
applications/test-uvc/: CMakeLists.txt  prj.conf
applications/test-uvc/boards/: esp32c3_supermini.overlay
applications/test-uvc/src/: main.c
applications/wifi-uart-bridge/: CMakeLists.txt  README.md  app.overlay  app.overlay_unused?  prj.conf  zephyr-projects.code-workspace
applications/wifi-uart-bridge/boards/: esp32c3_supermini.overlay
applications/wifi-uart-bridge/src/: led.c  led.h  main.c
